--- a/package.json
+++ b/package.json
@@ -6,10 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "eslint  --fix",
+      "prettier --write"
+    ]
   },
   "dependencies": {
+    "eslint-config-prettier": "^8.8.0",
+    "lint-staged": "^13.2.3",
     "next": "13.4.9",
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -22,6 +33,7 @@
     "eslint-config-next": "^13.4.9",
     "postcss": "^8.4.25",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "husky": "^7.0.0"
   }
 }
