--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     ]
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "eslint-config-prettier": "^8.8.0",
     "lint-staged": "^13.2.3",
     "next": "13.4.9",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "@types/node": "^20.4.2",
@@ -31,9 +33,9 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^8.44.0",
     "eslint-config-next": "^13.4.9",
+    "husky": "^7.0.0",
     "postcss": "^8.4.25",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.6",
-    "husky": "^7.0.0"
+    "typescript": "^5.1.6"
   }
 }
