--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
     ]
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^1.0.6",
     "axios": "^1.4.0",
     "eslint-config-prettier": "^8.8.0",
+    "ethers": "^6.6.3",
     "lint-staged": "^13.2.3",
     "next": "13.4.9",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "viem": "^1.2.14",
+    "wagmi": "^1.3.8"
   },
   "devDependencies": {
     "@types/node": "^20.4.2",
